# fast-api-lms

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
api/: courses.py  sections.py  users.py
api/utils/: courses.py  users.py
db/: db_setup.py
db/models/: course.py  models.py  student_course.py  user.py
migrations/: env.py
migrations/versions/: 1e2990baf0bc_add_cascade_for_course.py  367b68ee2c08_moving_is_activate_to_user_table.py  6c538f73c132_add_set_for_course.py  705ac8698591_create_init_tables.py  7d5e12663fab_create_tables.py  80056e51ba2f_add_cascade_for_studentcourse.py  a7de906f6bfa_add_set_forurse.py  c07a1ead0e62_add_set_null_for_course.py
pydantic_schemas/: course.py  user.py
