[tool.poetry]
name = "lms"
version = "0.1.0"
description = ""
authors = ["Nick Dynin <dynin.nikolaj2010@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.101.0"
pydantic = "^2.1.1"
sqlalchemy = "^2.0.19"
psycopg2-binary = "^2.9.7"
sqlalchemy-utils = "^0.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
